--- a/src/main.scss
+++ b/src/main.scss
@@ -1,65 +1,113 @@
 $border_default: 5px solid white;
+$base_color: #FFFFFF;
+$base_bgcolor: #000000;
+
+@mixin selected_command {
+  border: 10px solid transparent;
+  border-top-width: 10px;
+  border-bottom-width: 10px;
+  border-left-color: $base_color;
+}
+
+/**
+ * reset
+ */
+p {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   margin: 0;
   padding: 0;
-  background: black;
-  // background-image: radial-gradient(silver 7%, transparent 0), radial-gradient(silver 7%, transparent 0);
-  // background-position: 0 0, 10px 10px;
+  background: $base_bgcolor;
   background-size: 10px 10px;
-  color: white;
+  color: $base_color;
 }
 #container {
-  margin: 0 auto;
+  margin: 50px auto;
   width: 800px;
   height: 800px;
-  border: 3px solid white;
+  border: 1px solid $base_color;
   border-radius: 10px;
   padding: 16px;
+  position: absolute;
+  background-image: url('./field-image.png');
+  background-size: cover;
 }
 .header {
   display: flex;
   justify-content: space-around;
   position: relative;
 
-  > .command {
-      padding: 15px;
-      height: 55px;
-      border: $border_default;
-      border-radius: 10px;
+  > .status {
+    top: 100px;
+    padding: 15px;
+    width: 130px;
+    border: 5px solid $base_color;
+    border-radius: 10px;
+    position: relative;
+    background: $base_bgcolor;
+  
     > span {
-      font-size: 20px;
-      color: white;
-      background-color: black;
+      font-size: 24px;
+      color: $base_color;
+      background-color: $base_bgcolor;
       position: absolute;
       top: -15px;
-      margin-left: 50px;
+      margin-left: 7px;
+    }
+  
+    > .status-row {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 8px;
+
+      > span {
+        font-size: 24px;
+      }
+    }
+  }
+
+  > .command {
+      padding: 15px;
+      width: 300px;
+      height: 75px;
+      border: $border_default;
+      border-radius: 10px;
+      background: $base_bgcolor;
+
+    > span {
+      font-size: 24px;
+      color: $base_color;
+      background-color: $base_bgcolor;
+      position: absolute;
+      top: -15px;
+      margin-left: 100px;
     }
     > div {
       > a {
+        font-size: 24px;
         padding-left: 10px;
         display: inline-block;
-        width: 100px;
+        width: 140px;
         position: relative;
 
         &::selection {
-          background-color: #000000;
+          background-color: $base_bgcolor;
         }
 
         &:hover {
           cursor: pointer;
           &:before {
+            @include selected_command;
             color: gray;
-            border: 7px solid transparent;
-            border-top-width: 5px;
-            border-bottom-width: 5px;
-            border-left-color: #fff;
             width: 0;
             height: 0;
             content: '';
             position: absolute;
             left: -3px;
-            top: 7px;
+            top: 8px;
           }
         }
       }
@@ -70,50 +118,28 @@ body {
     }
   }
 }
-.status {
-  padding: 15px;
-  width: 110px;
-  border: 5px solid white;
-  border-radius: 10px;
-  position: relative;
-
-  > span {
-    font-size: 20px;
-    color: white;
-    background-color: black;
-    position: absolute;
-    top: -15px;
-    margin-left: 6px;
-  }
-
-  > .status-row {
-    display: flex;
-    justify-content: space-between;
-  }
-}
 .monster {
-  width: 200px;
-  height: 200px;
+  width: 350px;
+  height: 350px;
   margin: 0 auto;
-  border-radius: 10px;
-  border: 1px solid white;
+  z-index: -1;
+  border: 5px solid $base_color;
+  background: $base_bgcolor;
+  // background-image: url('./pukure.gif');
+  background-size: cover;
 }
-.hoge {
-  display: flex;
-  justify-content: space-between;
-}
-.selection {
-  margin-top: 24px;
-  width: 250px;
-  height: 300px;
-  border-radius: 10px;
-  border: 1px solid white;
-}
-.enemy-life {
-  margin-top: 24px;
-  width: 400px;;
-  padding-left: 16px;
-  height: 200px;
-  border: 1px solid white;
-  border-radius: 10px;
+.messages {
+  width: 500px;
+  height: 250px;
+  border: 5px solid $base_color;
+  background: $base_bgcolor;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  bottom: 50px;
+
+  > .log {
+    padding: 12px;
+  }
 }
