--- a/src/main.scss
+++ b/src/main.scss
@@ -143,11 +143,11 @@ body {
   background-size: cover;
 
   > .yagi {
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
-    margin-top: 40px;
     background-image: url('./yagi.png');
+    background-size: cover;
   }
 }
 .messages {
@@ -166,7 +166,7 @@ body {
     cursor: pointer;
   }
 
-  > .player-message {
+  > .player-message, .enemy-message {
     padding: 12px;
     > p {
       display: inline-block;
@@ -204,40 +204,8 @@ body {
   }
 
   > .enemy-message {
-    padding: 12px;
     > p {
       padding-left: 50px;
-      display: inline-block;
-      width: 100%;
-      opacity: 0;
-      white-space: nowrap;
-      overflow: hidden;
-      animation: typing 1.5s steps(30, end);
-      animation-fill-mode: forwards;
-
-      &.delay-1 {
-        @include animation-delay(0);
-      }
-
-      &.delay-2 {
-        @include animation-delay(1);
-      }
-
-      &.delay-3 {
-        @include animation-delay(2);
-      }
-
-      &.delay-4 {
-        @include animation-delay(3);
-      }
-
-      &.delay-5 {
-        @include animation-delay(4);
-      }
-
-      &.delay-6 {
-        @include animation-delay(5);
-      }
     }
   }
 }
